@startuml
skin rose
top to bottom direction
hide empty members


entity Corredor {
    nombre
    velocidadBase
    posicionActual
    estadisticas
}

entity PowerUp {
    nombre
    bonus
    duracion
}

entity Carrera {
    participantes
    meta
    turnoActual
}

entity SistemaJuego {
    jugadores
    historial
}

entity Estadisticas {
    carrerasJugadas
    victorias
    posicionPromedio
    porcentajeVictorias
}

entity Torneo {
    rondas
    resultados
}

entity Jugador {
    corredorSeleccionado
}

SistemaJuego "1" -- "*" Corredor : gestiona >
SistemaJuego "1" -- "1" Jugador : tiene >
SistemaJuego "1" -- "*" Carrera : organiza >
Corredor "1" -- "1" PowerUp : posee >
Corredor "1" -- "1" Estadisticas : mantiene >
Carrera "1" -- "3" Corredor : compiten >
Carrera "1" -- "1" Jugador : participa >
Torneo "1" -- "4" Carrera : incluye >
Torneo "1" -- "1" Jugador : participa >
Jugador "1" -- "1" Corredor : selecciona >

@enduml